new change for the module

--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -295,3 +295,5 @@ Additionally, you can also apply the max-height property if you've a fixed heigh
     <!-- <a #downloadLink></a> -->
   </div> 
 <button mat-raised-button (click)="openDialog()">Feedback</button>
+
+<app-login></app-login>
