--- a/src/app/feedback/screen-shot.html
+++ b/src/app/feedback/screen-shot.html
@@ -3,8 +3,7 @@
     <div class="container" style="border-width: 2px solid red;height: 100%; ">
         <div  style="display: flex; display: flex;height: 82% !important;">
         <div class="flex-child " style="width: 50%; border: 2px solid black">
-            <img [src]='serviceImg' class="img-responsive" style=" height: fit-cover; max-width: 100%;
-            max-height: 100%;"  > 
+            <img [src]='serviceImg' class="img-responsive" style=" height: fit-cover; max-width: 100%;   max-height: 100%;"  > 
           </div>
           <div class="flex-child" style="width: 50% !important;">
             <mat-form-field appearance="fill" style="display: block; height: 100%;">
@@ -14,12 +13,10 @@
           </div>
         </div>
           
-          <button mat-raised-button (click)="screenshot()"   color="primary">Take Screenshot </button>
+<button mat-raised-button (click)="screenshot()"   color="primary">Take Screenshot </button>
 </div>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
      
       <button mat-raised-button  mat-dialog-close tabindex="-1" color="primary">Close</button>
     </mat-dialog-actions>
-    
-    
