--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -17,4 +17,9 @@
     transform: translate(-50%, -50%);
     left: 62%;
 }
-
+.form-element{
+    margin-top: 5px;
+}
+.recaptcha{
+    float: right;
+}
